--- a/php/html/ajax/ajax_hello.html
+++ b/php/html/ajax/ajax_hello.html
@@ -25,6 +25,7 @@ function loadDoc() {
 	//xhttp.open("GET", "ajax_info.txt", true);
 	//xhttp.open("GET", "http://www.example.com/ajax/ajax_info.txt", true);
 	xhttp.open("GET", "http://www.ericksun.com/ajax/ajax_info.txt", true);
+	//xhttp.open("GET", "http://www.example.com/ajax/ajax_info.txt", true);
 	xhttp.send();
 }
 </script>
