--- a/php/html/jsfunction/closures6.html
+++ b/php/html/jsfunction/closures6.html
@@ -9,6 +9,7 @@
 <p id="demo">0</p>
 
 <script>
+// 这里add 是一个函数 是匿名函数运行之后返回的
 var add = (function () {
     var counter = 0;
     return function () {return counter += 1;}
