--- a/php/html/foo/index.html
+++ b/php/html/foo/index.html
@@ -77,7 +77,7 @@
         <h1>Welcome to <strong>nginx</strong> on EPEL!</h1>
 
         <div class="content">
-            <p>This page is used to test the proper operation of the
+            <p>In /var/www/html/foo This page is used to test the proper operation of the
             <strong>nginx</strong> HTTP server after it has been
             installed. If you can read this page, it means that the
             web server installed at this site is working
